Remove large video file from Git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 /Users/wafichoudhury/Desktop/Instnce/Instnce/Assets.xcassets/video1.dataset
+Instnce/Assets.xcassets/video1.dataset/SPEED GOES PRO, EPISODE 2_ SUNI LEE.mp4
